
  Added high-resolution (100ns) timer for Mac OS X
    many thanks to Markus Peter.
  Added assorted optimizations thanks to Nicholas Clark.

  Changed subroutine profiler to be slightly more efficient.
  Changed some tests to be more informative on failure.
  Changed nytprofhtml to be smarter when source isn't available.
  Changed nytprofhtml to show sort arrow on sortable tables.

  Updated docs to include a note about timing on Windows.
  Updated docs to include a section about making NYTProf faster.

=head2 Changes in Devel::NYTProf 3.01 (svn r1005) 28th Dec 2009

  Fixed (removed) use of vfscanf() which broke on Windows.
  Fixed version number in nytprofmerge.

  Added documentation to nytprofcg and nytprofmerge.

  Updated NYTProf docs, including noting major contributors.
  Updated docs to fix assorted typos, thanks to Jonathan Yu.
  Updated nytprofcsv documentation.

=head2 Changes in Devel::NYTProf 3.00 (svn r998) 24th Dec 2009

  Note: The file format has changed. Old files can't be read.

  Fixed (rare) overflow bug for 32bit perls.
  Fixed discarding of (rare) negative intervals.
  Fixed risk of infinite recursion if trace enabled and
    $SIG{__WARN__} was set to a code reference.
  Fixed subroutine recursion depth measurement.
  Fixed missing embedded eval source code for some older perls.
  Fixed assorted compiler warnings for various configurations.

  Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.

  Added log=F option to write trace log to a file.
  Added warning when reading a file with a minor version higher
    than expected.

  Added slowops=N option which enables profiling of potentially slow
    perl opcodes (e.g., system calls and regexs). They're treated like xsubs.
    slowops=0 disables profiling of 'slowops'
    slowops=1 puts timings into one package ("CORE::", eg CORE::sleep)
    slowops=2 (the defaut) puts timings into into the package that made the
    call, e.g., "Foo::CORE:sleep" (note the single colon).
